# reticle

./: .gitignore  Cargo.toml  Makefile  README.md  TODO  toolchain-x86_64-linux-gnu.cmake
.cargo/: config.toml
.devcontainer/: Dockerfile
.github/: pull_request_template.md
.github/workflows/: wasm.yaml
.zed/: settings.json
attestation-server/: Cargo.toml  Dockerfile
attestation-server/src/: main.rs  modules.rs  nonce.rs  nvidia_api.rs  response.rs  sev_api.rs  tdx_api.rs
examples/bare/: bare.js  package-lock.json  package.json
examples/bun/: .gitignore  .npmrc.example  README.md  index.ts  package.json
examples/vite/: package.json
examples/vite/src/: main.ts
libattest/: Cargo.toml
libattest/src/: error.rs  lib.rs  modules.rs  validation.rs  verification_new.rs
nvidia-attest/: Cargo.toml
nvidia-attest/src/: keychain.rs  lib.rs  nonce.rs  types.rs  verifiers.rs
nvidia-attest/tests/: verification.rs
prem-rs/: Cargo.toml  README.md
prem-rs/examples/: endtoend.rs  sev.rs
prem-rs/examples/bare/: bare.js  package-lock.json  package.json
prem-rs/src/: error.rs  gateway.rs  lib.rs  rego.rs
prem-rs/tests/: policies.rs
reticle/: Cargo.toml  README.md
reticle/examples/: endtoend.rs
reticle/src/: rego.rs
reticle/tests/: policies.rs
snp-attest/: Cargo.toml
snp-attest/src/: kds.rs  kds_util.rs  lib.rs  nonce.rs
snp-attest/src/attestation/: chain.rs  kds.rs  mod.rs
tdx-attest/: Cargo.toml
tdx-attest/examples/: parse.rs
tdx-attest/src/: certificates.rs  lib.rs  parser.rs  pcs.rs  verify.rs
tdx-attest/tests/: pcs.rs
(+5 files in other folders)
