[package]
name = "attestation-server"
version = "0.1.0"
edition = "2024"

[features]
sev = ["dep:sev"]
default = ["sev"]

[dependencies]
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
sev = { version = "7.1.1", default-features = false, features = ["crypto_nossl", "snp"], optional = true }
rocket = { version = "0.5.1", features = ["json"] }
anyhow = "1.0.100"
base64 = "0.22.1"
hex = "0.4.3"
thiserror = "2.0.17"

snp-attest = { path = "../snp-attest", default-features = false }
